--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <optional>true</optional>
             <scope>test</scope>
             <!-- comment <scope> to run locally -->
         </dependency>
@@ -94,6 +95,7 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${springdoc.version}</version>
+            <optional>true</optional>
             <scope>test</scope>
             <!-- comment <scope> to run locally -->
         </dependency>
@@ -101,6 +103,7 @@
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-server</artifactId>
             <version>${sba.version}</version>
+            <optional>true</optional>
             <scope>test</scope>
             <!-- comment <scope> to run locally -->
         </dependency>
@@ -108,6 +111,7 @@
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
             <version>${sba.version}</version>
+            <optional>true</optional>
             <scope>test</scope>
             <!-- comment <scope> to run locally -->
         </dependency>
